fix: tel error message does not overflow

--- a/style.css
+++ b/style.css
@@ -94,7 +94,9 @@ section {
 
 section:last-child {
     padding-top: 2em;
-    margin-bottom: 2em;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
 section:nth-child(2) {
@@ -114,7 +116,7 @@ section:first-child p {
 }
 
 section:first-child p:nth-child(1) {
-    margin-top: 4rem;
+    margin-top: 3rem;
 }
 
 form {
@@ -165,7 +167,7 @@ select {
 }
 
 .errorMsg {
-    height: 2rem;
+    height: 3rem;
     color: transparent;
 }
 
@@ -193,7 +195,6 @@ button[type="submit"] {
     font-size: var(--font-size-sm);
     font-weight: 600;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 2em;
 	cursor: pointer;
 }
 
